external-crates/move/crates/move-compiler/tests/move_check/parser/function_visibility_multiple.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
input_file: crates/move-compiler/tests/move_check/parser/function_visibility_multiple.move
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_visibility_multiple.move:2:19
  │
2 │     public(script script) fun f() {}
  │                   ^^^^^^
  │                   │
  │                   Unexpected 'script'
  │                   Expected ')'
